# meadow-dsp

./: Cargo.toml  README.md
meadow-dsp-agpl/: Cargo.toml  README.md
meadow-dsp-agpl/src/parametric_eq/: f32.rs
meadow-dsp-agpl/src/parametric_eq/f32/: coeff.rs  state.rs
meadow-dsp-mit/: Cargo.toml  README.md
meadow-dsp-mit/src/: lib.rs
meadow-dsp-mit/src/filter/one_pole_iir/: f32.rs
meadow-dsp-mit/src/filter/svf/: f64.rs
meadowlark-dsp-agpl/: Cargo.toml  README.md
meadowlark-dsp-agpl/src/: lib.rs
meadowlark-dsp-agpl/src/parametric_eq/: f32.rs
meadowlark-dsp-agpl/src/parametric_eq/f32/: coeff.rs  mono copy.rs  state.rs
meadowlark-dsp-agpl/src/parametric_eq/f32/stereo/: scalar.rs
meadowlark-dsp-gpl/: Cargo.toml  README.md
meadowlark-dsp-mit/: Cargo.toml  README.md
meadowlark-dsp-mit/src/: decibel.rs
meadowlark-dsp-mit/src/filter/: mod.rs
meadowlark-dsp-mit/src/filter/one_pole_iir/: f32.rs  f64.rs
meadowlark-dsp-mit/src/filter/svf/: f32.rs  f64.rs
