[package]
name = "meadowlark-dsp-mit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Billy Messenger <60663878+BillyDM@users.noreply.github.com>",
]
description = "Liberally-licensed DSP library used in the Meadowlark DAW project"
repository = "https://github.com/MeadowlarkDAW/meadowlark-dsp/meadowlark-dsp-mit"
keywords = ["dsp", "audio"]
categories = ["multimedia::audio"]

[features]
default = ["portable-simd"]
portable-simd = []

[dependencies]
